# datapizza-ai-barker

datapizza-ai-clients/datapizza-ai-clients-google/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-google/datapizza/clients/google/: google_client.py
datapizza-ai-clients/datapizza-ai-clients-openai/: pyproject.toml
datapizza-ai-clients/datapizza-ai-clients-openai/datapizza/clients/openai/: openai_client.py
datapizza-ai-clients/datapizza-ai-clients-openai/tests/: test_base_client.py
datapizza-ai-vectorstores/datapizza-ai-vectorstores-barker/: README.md  pyproject.toml
datapizza-ai-vectorstores/datapizza-ai-vectorstores-barker/datapizza/vectorstores/barker/: __init__.py  barker_vectorstore.py
datapizza-ai-vectorstores/datapizza-ai-vectorstores-barker/tests/: test_barker_vectorstore.py
