[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datapizza-ai-vectorstores-barker"
version = "0.0.1"
description = "Barker vectorstore for the datapizza-ai framework"
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.10.0,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "datapizza-ai-core>=0.1.0,<0.2.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "pytest",
    "pytest-asyncio",
    "respx>=0.21.0",
    "ruff>=0.11.5",
]

[tool.hatch.build.targets.sdist]
include = ["datapizza"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["datapizza"]
exclude = ["**/BUILD"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "W",
    "F",
    "B",
    "I",
    "UP",
    "SIM",
    "RUF",
    "C4",
]
